# qhs

./: .gitattributes  .travis.yml  LICENSE  Main.hs  Makefile  README.md  _qhs  qhs.cabal  stack.yaml
.github/workflows/: ci.yaml  release.yaml
src/: File.hs  Main.hs  Option.hs  Parser.hs  Qhs.hs  SQL.hs  SQLType.hs
src/Qhs/: CLI.hs  File.hs  Option.hs  Parser.hs  SQL.hs  SQLType.hs
test/: FileSpec.hs  MainSpec.hs  ParserSpec.hs  QhsSpec.hs  SQLSpec.hs
test/tests/: avg.sh  avg_sum.out  avg_sum.sh  basic.out  basic.sh  big.csv  columns.sh  concat.out  concat.sh  count.out  count.sh  crlf.csv  crlf.sh  delimiters.sh  empty_query.out  empty_query.sh  empty_query_file.sh  escape_carriage_return.csv  escape_carriage_return.out  escape_carriage_return.sh  escape_custom_delimiter.csv  escape_custom_delimiter.out  escape_custom_delimiter.sh  escape_delimiter.csv  escape_delimiter.out  escape_delimiter.sh  escape_quotes.csv  escape_quotes.out  escape_quotes.sh  file containing spaces.csv  file_spaces.out  file_spaces.sh  group.out  group.sh  group_sum.out  group_sum.sh  gzip.sh  gzip_stdin.out  gzip_stdin.sh  header.out  (+44 more)
