name:                   qhs
version:                0.3.0
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Console
build-type:             Simple
cabal-version:          >=1.6
synopsis:               Command line processing tool qhs, SQL queries on CSV and TSV files.
description:            This is a Haskell port of q command (https://github.com/harelba/q).

executable qhs
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -threaded -Wall
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qhs
  build-depends:        base >= 4.9 && < 5
                      , containers
                      , split
                      , syb >= 0.4
                      , sqlite-simple
                      , simple-sql-parser >= 0.5.0
                      , optparse-applicative
                      , bytestring
                      , text
                      , cryptonite
                      , zlib

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:          -threaded -Werror -Wall
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qhs
                      , ParserSpec
                      , SQLSpec
                      , FileSpec
                      , MainSpec
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test,src
  build-depends:        base >= 4.9 && < 5
                      , containers
                      , split
                      , syb >= 0.4
                      , sqlite-simple
                      , simple-sql-parser >= 0.5.0
                      , hspec
                      , process

source-repository head
  type:     git
  location: git@github.com:itchyny/qhs.git
