name:                   qhs
version:                0.3.3
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Console
build-type:             Simple
cabal-version:          >=1.10
synopsis:               Command line tool qhs, SQL queries on CSV and TSV files.
description:            This is a Haskell port of q command (https://github.com/harelba/q).

executable qhs
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  default-extensions:   BlockArguments
                      , FlexibleInstances
                      , ImportQualifiedPost
                      , LambdaCase
                      , NoFieldSelectors
                      , OverloadedRecordDot
                      , TupleSections
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qhs
  build-depends:        base >= 4.9 && < 5
                      , bytestring
                      , containers
                      , cryptonite
                      , extra
                      , optparse-applicative
                      , simple-sql-parser >= 0.6.0
                      , split
                      , sqlite-simple
                      , syb >= 0.4
                      , text
                      , zlib

test-suite spec
  hs-source-dirs:       test,src
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  default-extensions:   BlockArguments
                      , FlexibleInstances
                      , ImportQualifiedPost
                      , LambdaCase
                      , NoFieldSelectors
                      , OverloadedRecordDot
                      , TupleSections
  other-modules:        Parser
                      , SQL
                      , SQLType
                      , File
                      , Option
                      , Paths_qhs
                      , ParserSpec
                      , SQLSpec
                      , FileSpec
                      , MainSpec
  build-depends:        base >= 4.9 && < 5
                      , bytestring
                      , containers
                      , cryptonite
                      , extra
                      , hspec
                      , optparse-applicative
                      , process
                      , simple-sql-parser >= 0.6.0
                      , split
                      , sqlite-simple
                      , syb >= 0.4
                      , text
                      , zlib

source-repository head
  type:     git
  location: git@github.com:itchyny/qhs.git
